src/style.css
* { box-sizing: border-box }

body { 
  padding: 0;
  margin: 0;
  font-family: "Inter", "DejaVu Serif", serif;
  font-size: 16px;
}

:root {
  --page-color: #1D1E22;
  --panel-color: #1a1b1b;
  --canvas-color: #2D2E32;
  --primary-text-color: #FFFFFF;
  --secondary-text-color: #A0A0A0;
  --render-btn-color: #e62739;
  --render-btn-hovered-color: #F44336;
  --border-color: #3A3B40;
  --checked-color: #2196F3;
  --hover-text-color: #C5A059;
  --hover-border-color: #FF5722;
  --upload-track-btn-color: #4FACFE;
}

#app {
  position: relative;
  height: 100vh;
  display: flex;
  background: var(--page-color);
  color: var(--primary-text-color);
  overflow: hidden;
}

/* --------- settings --------- */
.settings-container {
 /* width: 300px;
  padding: 10px;
  background: var(--panel-color);
  font-size: 14px;
  height: 100%;
  overflow-y: auto;*/
}

/* SIDEBAR */
.sidebar {
  width: 280px;
  height: 100vh;
  display: flex;
  flex-direction: column;
  padding: 20px;
  border-right: 1px solid rgba(255,255,255,0.05);
  background: var(--panel-color);
  overflow-y: auto;
}

/* TITLE */
.sidebar h2 {
  margin: 0 0 25px 0;
  font-size: 18px;
  font-weight: 600;
  letter-spacing: 0.5px;
  opacity: 0.85;
}

/* GROUP */
.group {
  margin-bottom: 20px;
}

.group-title {
  margin-bottom: 10px;
  font-size: 12px;
  text-transform: uppercase;
  letter-spacing: 1px;
  opacity: 0.4;
}

.group-item {
  padding: 5px;
  border-radius: 5px;
}

.group-item.active {
  margin-bottom: 10px;
  background-color: rgba(255,255,255,0.05);
}

/* ITEM */
.item {
  display: flex;
  align-items: center;
  gap: 12px;
  padding: 5px 7px;
  border-radius: 10px;
  cursor: pointer;
  /*transition: all 0.2s ease;*/
}

.item:hover {
  background: rgba(255,255,255,0.05);
}

.group-item.active .item:hover {
  background: transparent;
}

.item.active {
  background: rgba(255,255,255,0.08);
}

/* ICON */
.icon {
  width: 20px;
  height: 20px;
  opacity: 0.7;
}

/* TEXT */
.label {
  font-size: 14px;
  flex: 1;
}

/* SMALL VALUE */
.value {
  font-size: 12px;
  opacity: 0.5;
}

/* CHEVRON */
.chevron {
  width: 16px;
  height: 16px;
  opacity: 0.5;
  transition: transform 0.25s ease;
}

.chevron.open {
  transform: rotate(90deg);
}

/* EXPAND */
.expand {
  margin-top: 10px;
  margin-bottom: 10px;
  display: none;
  flex-wrap: wrap;
  gap: 8px;
}

.expand.open {
  display: flex;
}

/* INLINE OPTIONS */
.option {
  display: flex;
  align-items: center;
  gap: 6px;
  border-radius: 5px;
  cursor: pointer;
  background: rgba(255,255,255,0.03);
  transition: 0.2s;
  font-size: 12px;
}

.option:hover {
  background: rgba(255,255,255,0.08);
}

.option.active {
  /*background: rgba(255,255,255,0.15);*/
  background: var(--checked-color);
}

/* icons inside options */
.option i {
  width: 14px;
  height: 14px;
}






.settings-form-item {
/*  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding: 10px 0 0 0;*/
}

.settings-form-item label {
  /*font-size: 12px;*/
}

.settings-form-item > label {
  /*color: var(--secondary-text-color);*/
}

.settings-form-item:hover > label {
  /*color: var(--hover-text-color);*/
}

.settings-form-item > div {
  /*padding: 5px;*/
}

/* Hide the browser's default radio button */
.custom-radio input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  z-index: -1;
}

/* Style the custom radio button container */
.checkmark {
  /*display: inline-block;
  padding: 2px;
  border: 1px solid var(--border-color);
  border-radius: 5px;
  color: var(--primary-text-color);*/
  display: inline-block;
  padding: 6px 10px;
  cursor: pointer;
}

/* On mouse-over, add a grey background color */
.custom-radio:hover input ~ .checkmark {
  /*border-color: var(--hover-border-color);*/
}

/* When the radio button is checked, add a blue background */
.custom-radio input:checked ~ .checkmark {
  /*border-color: var(--checked-color);*/
}

.freq-number-container {
  flex-basis: 100%;
  margin-top: 5px;
  padding: 10px;
  border-radius: 5px;
  font-size: 12px;
  background: var(--canvas-color);
}

.freq-number-container span {
  padding: 0 5px;
}

.freq-number-container.hide {
  display: none;
}



div.visualization-options {
  /*padding: 0;*/
}

.visualization-options > label {
  /*display: inline-block;*/
  /*margin: 3px 3px 3px 0;*/
}
/* ------end settings --------- */


.app-center {
  flex: 1;
  display: flex;
  flex-direction: column;
}


/* --------- spectrum visualization canvas --------- */
.canvas-container {
  position: relative;
  flex: 1;
  display: flex;
  justify-content: center;
  align-items: center;
}

.uploaded-img-bg {
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

.canvas {
  background-color: var(--canvas-color);
}

.area-container {
  position: absolute;
}

.area-container.hide {
  display: none;
}

.area {
  position: absolute;
  width: 100%;
  height: 255px;
  left: 0;
  bottom: 0;
  border: 1px solid #feda6a;
  cursor: move;
  user-select: none;
}

/* resizing marker styles */
.resizer {
  width: 10px;
  height: 10px;
  background: #fff;
  border: 1px solid #333;
  position: absolute;
  z-index: 10;
}

/* positioning markers */
.resizer-r { cursor: e-resize; right: -5px; top: 50%; transform: translateY(-50%); }
.resizer-b { cursor: s-resize; bottom: -5px; left: 50%; transform: translateX(-50%); }
.resizer-br { cursor: se-resize; bottom: -5px; right: -5px; }
.resizer-l { cursor: w-resize; left: -5px; top: 50%; transform: translateY(-50%); }
.resizer-t { cursor: n-resize; top: -5px; left: 50%; transform: translateX(-50%); }
.resizer-tl { cursor: nw-resize; top: -5px; left: -5px; }
.resizer-tr { cursor: ne-resize; top: -5px; right: -5px; }
.resizer-bl { cursor: sw-resize; bottom: -5px; left: -5px; }
/* --------- end spectrum visualization canvas --------- */

.audio-container {
  padding: 10px;
  display: flex;
  justify-content: center;
}

.menu-container {
  width: 100px;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 20px;
  gap: 20px;
  background: var(--page-color);
}

.btn-container {
  width: 70px;
  height: 70px;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  background: rgba(255, 255, 255, 0.1);
}

.render-btn {
  width: 60px;
  height: 60px;
  border: none;
  outline: none;
  border-radius: 50%;
  color: var(--primary-text-color);
  background: var(--render-btn-color);
  cursor: pointer;
}

.render-btn:hover {
  background: var(--render-btn-hovered-color);
}

.btn-container:nth-of-type(n+2) {
  width: 55px;
  height: 55px;
  border-radius: 10px;
}

.upload-track-btn {
  width: 45px;
  height: 45px;
  border-radius: 5px;
  background: var(--upload-track-btn-color);
  font-size: 11px;
}

.upload-img-btn {
  background: #18b341;
}

/* --------- color picker --------- */
.color-picker-container {
  width: 230px;
}

div.color-picker-container {
  margin-top: 10px;
  padding: 0;
}

.color-picker-container.hide {
  display: none;
}

#colorCanvas {
  cursor: crosshair;
  border-radius: 4px;
}

.picker-slider { 
  width: 100%;
  margin: 10px 0;
  appearance: none;
  height: 10px;
  border-radius: 5px;
}

/* Hue Gradient Background */
.hue-slider {
  background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
}

/* Opacity Checkerboard Effect */
.opacity-slider {
  background-image: linear-gradient(45deg, #ccc 25%, transparent 25%), 
                    linear-gradient(-45deg, #ccc 25%, transparent 25%), 
                    linear-gradient(45deg, transparent 75%, #ccc 75%), 
                    linear-gradient(-45deg, transparent 75%, #ccc 75%);
  background-size: 10px 10px;
  background: linear-gradient(to right, transparent, #9068be);
}

.preview-box {
  width: 40px;
  height: 40px;
  border: 1px solid #ccc;
  margin-right: 10px;
  background: #9068be;
}

.picker-result-container {
  display: flex;
  align-items: center;
  margin-top: 10px;
  justify-content: space-between;
}

input[type="text"]#colorCode {
  display: none;
  flex-grow: 1;
  padding: 5px;
  border: 1px solid #ddd;
}

.picker-result {
  display: flex;
  gap: 15px;
  font-size: 14px;
}

.picker-result div {
  padding: 5px;
  border: 1px solid var(--border-color);
  border-radius: 3px;
  text-align: center;
}

.picker-result div:first-child {
  width: 75px;
}

.picker-result div:last-child {
  width: 45px;
}
/* --------- end color picker --------- */

